added loading gif

--- a/index.html
+++ b/index.html
@@ -118,10 +118,11 @@
             <!-- Modal content-->
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">Planet Data</h4>
+                    <h4 class="modal-title">Celestial Data</h4>
                     <button type="button" class="close" data-dismiss="modal">X</button>
                 </div>
                 <div class="modal-body" id="planet-card">
+                    <div class="loading-gif"></div>
                     <h2 id="planet-title"></h2>
                     <div id="planet-day-length"></div>
                     <div id="planet-year-length"></div>
@@ -147,10 +148,11 @@
             <!-- Modal content-->
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">Planet Data</h4>
+                    <h4 class="modal-title">Celestial Data</h4>
                     <button type="button" class="close" data-dismiss="modal">X</button>
                 </div>
                 <div class="modal-body" id="pluto-card">
+                    <div class="loading-gif"></div>
                     <h2 id="pluto-title"></h2>
                     <div id="pluto-day-length"></div>
                     <div id="pluto-year-length"></div>
@@ -176,10 +178,11 @@
             <!-- Modal content-->
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">Sun Data</h4>
+                    <h4 class="modal-title">Celestial Data</h4>
                     <button type="button" class="close" data-dismiss="modal">X</button>
                 </div>
                 <div class="modal-body">
+                    <div class="loading-gif"></div>
                     <h2 id="sun-title"></h2>
                     <div id="sun-distance-from-earth"></div>
                     <div id="sun-temp"></div>
