--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     <div id="planet-radius"></div>
                     <div id="planet-moons"></div>
                 </div>
-                <canvas id="chart"></canvas>
+                <canvas id="chart" width="600" height="600"></canvas>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal" id="close-button">Close</button>
                 </div>
@@ -162,7 +162,7 @@
                     <div id="pluto-radius"></div>
                     <div id="pluto-moons"></div>
                 </div>
-                <canvas id="plutoChart"></canvas>
+                <canvas id="plutoChart" width="600" height="600"></canvas>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal" id="close-button">Close</button>
                 </div>
@@ -189,7 +189,7 @@
                     <div id="sun-age"></div>
                     <div id="sun-lifespan"></div>
                 </div>
-                <canvas id="sunChart"></canvas>
+                <canvas id="sunChart" width="600" height="600"></canvas>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal" id="close">Close</button>
                 </div>
