--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 
     <!-- chart.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+
+    <link rel="icon" type="image/png" href="assets/images/planet-favicon.png">
+
 </head>
 
 <body>
